move Cell class to separate file

--- a/index.html
+++ b/index.html
@@ -381,5 +381,6 @@ table.centre {
       </div>
     </footer>
 
+  <script src="./cells.js"></script>
   <script src="./life.js"></script>
 </body></html>
