--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>2D Cellular Automaton</title>
-    <script src="../lib/jscolor.min.js"></script>
+    <script src="https://tilde.town/~nossidge/lib/jscolor.min.js"></script>
 
     <style title="life">
 /* https://philipwalton.github.io/solved-by-flexbox/demos/holy-grail/ */
