move rule descriptions to separate file

--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@ table.centre {
       </div>
     </footer>
 
+  <script src="./rules.js"></script>
   <script src="./cells.js"></script>
   <script src="./life.js"></script>
 </body></html>
