--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ table.centre {
                   <tbody>
                     <tr>
                       <td>Width:</td>
-                      <td><input id="range_width" type="range" min="21" max="299" value="97" step="2" style="width: 200px;" oninput="updateDOMInnerHTML('span_width',this.value)" /></td>
+                      <td><input id="range_width" type="range" min="21" max="299" value="97" step="2" style="width: 200px;" oninput="FUNCTIONS.updateDOMInnerHTML('span_width',this.value)" /></td>
                       <td width="30"><span id="span_width">97</span></td>
 
                       <!-- this is really hacky... -->
@@ -171,12 +171,12 @@ table.centre {
                     </tr>
                     <tr>
                       <td>Height:</td>
-                      <td><input id="range_height" type="range" min="21" max="299" value="97" step="2" style="width: 200px;" oninput="updateDOMInnerHTML('span_height',this.value)" /></td>
+                      <td><input id="range_height" type="range" min="21" max="299" value="97" step="2" style="width: 200px;" oninput="FUNCTIONS.updateDOMInnerHTML('span_height',this.value)" /></td>
                       <td width="30"><span id="span_height">97</span></td>
                     </tr>
                     <tr>
                       <td>Pixels:</td>
-                      <td><input id="range_pixels" type="range" min="1" max="16" value="8" step="1" style="width: 200px;" oninput="updateDOMInnerHTML('span_pixels',this.value)" /></td>
+                      <td><input id="range_pixels" type="range" min="1" max="16" value="8" step="1" style="width: 200px;" oninput="FUNCTIONS.updateDOMInnerHTML('span_pixels',this.value)" /></td>
                       <td width="30"><span id="span_pixels">8</span></td>
                     </tr>
                   </tbody>
