move state variables to separate file

--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@ table.centre {
       </div>
     </footer>
 
+  <script src="./state.js"></script>
   <script src="./functions.js"></script>
   <script src="./rules.js"></script>
   <script src="./cells.js"></script>
