--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@ table.centre {
 
               <input type="button" value="Clear canvas and pause" onclick="clearCanvas()">
               <br>
-              <input type="button" value="Randomise cells" onclick="randomise()">
+              <input type="button" value="Randomise cells" onclick="CANVAS.randomise()">
               <br>
-              <input type="button" value="Central rectangle" onclick="randomiseCentralBlock()">
+              <input type="button" value="Central rectangle" onclick="CANVAS.randomiseCentralBlock()">
               <br>
 
             </details>
@@ -389,6 +389,7 @@ table.centre {
   <script src="./functions.js"></script>
   <script src="./rules.js"></script>
   <script src="./cells.js"></script>
+  <script src="./canvas.js"></script>
   <script src="./ui.js"></script>
   <script src="./epilepsy.js"></script>
   <script src="./life.js"></script>
