--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ table.centre {
               <table class="centre">
                 <tr>
                   <td style="text-align:right">Framerate:</td>
-                  <td><input id="range_framerate" type="range" min="0" max="10" value="8" step="1" style="width: 200px;" oninput="UI.updateFramerate(this.value)" /></td>
+                  <td><input id="range_framerate" type="range" min="0" max="10" value="8" step="1" style="width: 200px;" oninput="STATE.frameRate(this.value)" /></td>
                   <td width="40"><span id="span_framerate">8</span></td>
                 </tr>
                 <tr>
