--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ table.centre {
           <input id="button_step" type="button" title="Keyboard: space" value="&#10073;&#9658;" onclick="UI.stepFrame()">
         </div>
         <div class="header_right">
-          <input id="button_epilepsy" type="button" value="Epilepsy: Safe(ish)" onclick="EPILEPSY.epilepsyToggle()">
+          <input id="button_epilepsy" type="button" value="Epilepsy: Safe(ish)" onclick="EPILEPSY.toggleEpilepsy()">
         </div>
       </div>
     </header>
