better blur setter

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ table.centre {
                 <tr>
                   <td style="text-align:right">Blur:</td>
                   <td>
-                  <input id="range_blur" type="range" min="0" max="100" value="0" step="5" style="width: 200px;" oninput="UI.updateBlur(this.value)" />
+                  <input id="range_blur" type="range" min="0" max="100" value="0" step="5" style="width: 200px;" oninput="STATE.blurPercent(this.value)" />
                   </td>
                   <td width="40"><span id="span_blur">1</span></td>
                 </tr>
