move animation functions to separate file

--- a/index.html
+++ b/index.html
@@ -392,5 +392,6 @@ table.centre {
   <script src="./canvas.js"></script>
   <script src="./ui.js"></script>
   <script src="./epilepsy.js"></script>
+  <script src="./animation.js"></script>
   <script src="./life.js"></script>
 </body></html>
