move pause functions to ANIMATION

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ table.centre {
           <p hidden>Yet another Life implementation.</p>
         </div>
         <div class="header_left">
-          <input id="button_pause" type="button" title="Keyboard: p" value="&#10073;&#10073;" onclick="STATE.pausedToggle()">
+          <input id="button_pause" type="button" title="Keyboard: p" value="&#10073;&#10073;" onclick="ANIMATION.pausedToggle()">
           <input id="button_step" type="button" title="Keyboard: space" value="&#10073;&#9658;" onclick="UI.stepFrame()">
         </div>
         <div class="header_right">
