move mouse events to separate file

--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@ table.centre {
   <script src="./cells.js"></script>
   <script src="./canvas.js"></script>
   <script src="./ui.js"></script>
+  <script src="./mouse.js"></script>
   <script src="./epilepsy.js"></script>
   <script src="./animation.js"></script>
   <script src="./life.js"></script>
