move keyboard events to separate file

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ table.centre {
                 </tr>
               </table>
 
-              <input type="button" value="Clear canvas and pause" onclick="clearCanvas()">
+              <input type="button" value="Clear canvas and pause" onclick="CANVAS.clearAndPause()">
               <br>
               <input type="button" value="Randomise cells" onclick="CANVAS.randomise()">
               <br>
@@ -392,6 +392,7 @@ table.centre {
   <script src="./canvas.js"></script>
   <script src="./ui.js"></script>
   <script src="./mouse.js"></script>
+  <script src="./keyboard.js"></script>
   <script src="./epilepsy.js"></script>
   <script src="./animation.js"></script>
   <script src="./life.js"></script>
