--- a/index.html
+++ b/index.html
@@ -256,10 +256,12 @@
 
     <footer class="border">
       <div class="footer_div">
+        <div class="footer_left">
+          by <a href="https://tilde.town/~nossidge/">nossidge</a>
+        </div>
         <div class="footer_title">(incomplete; please don't distribute beyond tilde town yet)</div>
-        <div class="footer_left">by nossidge</div>
         <div class="footer_right">
-          <a hidden rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+          <a href="https://github.com/nossidge/life">fork me</a>
         </div>
       </div>
     </footer>
