--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://tilde.town/~nossidge/lib/jscolor.min.js"></script>
     <link rel="stylesheet" href="life.css">
   </head>
-  <body class="border">
+  <body>
     <header class="border">
       <div class="header_div">
         <div class="header_title">
