amend file system

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>2D Cellular Automaton</title>
     <script src="https://tilde.town/~nossidge/lib/jscolor.min.js"></script>
-    <link rel="stylesheet" href="life.css">
+    <link rel="stylesheet" href="css/life.css">
   </head>
   <body>
     <header class="border">
@@ -266,16 +266,16 @@
       </div>
     </footer>
 
-    <script src="./state.js"></script>
-    <script src="./functions.js"></script>
-    <script src="./rules.js"></script>
-    <script src="./cells.js"></script>
-    <script src="./canvas.js"></script>
-    <script src="./ui.js"></script>
-    <script src="./mouse.js"></script>
-    <script src="./keyboard.js"></script>
-    <script src="./epilepsy.js"></script>
-    <script src="./animation.js"></script>
-    <script src="./life.js"></script>
+    <script src="scripts/state.js"></script>
+    <script src="scripts/functions.js"></script>
+    <script src="scripts/rules.js"></script>
+    <script src="scripts/cells.js"></script>
+    <script src="scripts/canvas.js"></script>
+    <script src="scripts/ui.js"></script>
+    <script src="scripts/mouse.js"></script>
+    <script src="scripts/keyboard.js"></script>
+    <script src="scripts/epilepsy.js"></script>
+    <script src="scripts/animation.js"></script>
+    <script src="scripts/life.js"></script>
   </body>
 </html>
