--- a/app/index.html
+++ b/app/index.html
@@ -256,6 +256,8 @@
       </div>
     </footer>
 
+    <script src="scripts/vendor/cssValuePrefix.js"></script>
+    <script src="scripts/vendor/changecss.js"></script>
     <script src="scripts/state.js"></script>
     <script src="scripts/functions.js"></script>
     <script src="scripts/rules.js"></script>
