don't automatically render on cell randomise functions

--- a/app/index.html
+++ b/app/index.html
@@ -215,9 +215,9 @@
               <br>
               <input type="button" value="Clear canvas and pause" onclick="CANVAS.clearAndPause()">
               <br>
-              <input type="button" value="Randomise cells" onclick="CANVAS.randomise()">
+              <input type="button" value="Randomise cells" onclick="CANVAS.randomiseAndRender()">
               <br>
-              <input type="button" value="Central rectangle" onclick="CANVAS.randomiseCentralBlock()">
+              <input type="button" value="Central rectangle" onclick="CANVAS.randomiseCentralBlockAndRender()">
               <br>
 
             </details>
