--- a/app/index.html
+++ b/app/index.html
@@ -214,7 +214,7 @@
               </div>
               <br>
               <a href="#" title="Randomise cells" onclick="CANVAS.randomiseAndRender()">
-                <img id="button_random" height="53" width="53" /></a>
+                <img id="button_random"></a>
               <br>
               <input type="button" value="Clear canvas and pause" onclick="CANVAS.clearAndPause()">
               <br>
