move checkLifeRules() to UI

--- a/app/index.html
+++ b/app/index.html
@@ -136,27 +136,27 @@
                 </tr>
                 <tr>
                   <td style="text-align:right">Birth:</td>
-                  <td><input id="birth_0" type="checkbox" onchange="checkLifeRules();EPILEPSY.zeroNeighboursB()"></td>
-                  <td><input id="birth_1" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_2" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_3" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_4" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_5" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_6" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_7" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="birth_8" type="checkbox" onchange="checkLifeRules()"></td>
+                  <td><input id="birth_0" type="checkbox" onchange="UI.checkLifeRules();EPILEPSY.zeroNeighboursB()"></td>
+                  <td><input id="birth_1" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_2" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_3" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_4" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_5" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_6" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_7" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="birth_8" type="checkbox" onchange="UI.checkLifeRules()"></td>
                 <tr>
                 </tr>
                   <td style="text-align:right">Survival:</td>
-                  <td><input id="survival_0" type="checkbox" onchange="checkLifeRules();EPILEPSY.zeroNeighboursS()"></td>
-                  <td><input id="survival_1" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_2" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_3" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_4" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_5" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_6" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_7" type="checkbox" onchange="checkLifeRules()"></td>
-                  <td><input id="survival_8" type="checkbox" onchange="checkLifeRules()"></td>
+                  <td><input id="survival_0" type="checkbox" onchange="UI.checkLifeRules();EPILEPSY.zeroNeighboursS()"></td>
+                  <td><input id="survival_1" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_2" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_3" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_4" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_5" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_6" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_7" type="checkbox" onchange="UI.checkLifeRules()"></td>
+                  <td><input id="survival_8" type="checkbox" onchange="UI.checkLifeRules()"></td>
                 </tr>
               </table>
             </details>
