--- a/app/index.html
+++ b/app/index.html
@@ -261,6 +261,7 @@
 
     <script src="scripts/vendor/cssValuePrefix.js"></script>
     <script src="scripts/vendor/changecss.js"></script>
+    <script src="scripts/vendor/lzw_encoder.js"></script>
     <script src="scripts/state.js"></script>
     <script src="scripts/functions.js"></script>
     <script src="scripts/canvas.js"></script>
