move stateSave and stateLoad to STATE

--- a/app/index.html
+++ b/app/index.html
@@ -232,8 +232,8 @@
 
               <textarea id="state_text" style="width: 80%" rows="5" spellcheck="false"></textarea>
               <br>
-              <input type="button" value="Save State" onclick="stateSave()">
-              <input type="button" value="Load State" onclick="stateLoad()">
+              <input type="button" value="Save State" onclick="STATE.save()">
+              <input type="button" value="Load State" onclick="STATE.load()">
               <br>
 
             </details>
